# sciguard-autopilot

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
api/: __init__.py  main.py  run_store.py  runtime.py
app/: __init__.py  streamlit_app.py
core/: __init__.py  change_detector.py  coordinator.py  enforcement.py  events.py  impact.py  incident_state.py  investigation_models.py  investigator.py  lineage_analyzer.py  narration.py  pipeline_controller.py  policy_engine.py  profiles.py  reality_checker.py  recovery.py  remediation.py  reset.py  risk_engine.py  sentinel.py
datahub_client/: __init__.py  backends.py  mcp_client.py  metadata_reader.py  metadata_writer.py
docs/: architecture.md  code_map.md  development.md  devpost_submission.md  evaluation.md  visual_story.md
domain_profiles/: generic.yaml  materials.yaml  polymer.yaml
evaluation/: __init__.py  harness.py  metrics.py  scenarios.json
examples/: publish_candidate_report.py  run_incident.py  run_tg_unit_incident.py
security/: __init__.py  context_builder.py  policy_gate.py  redactor.py
tests/: test_api.py  test_change_detector.py  test_context_builder.py  test_coordinator.py  test_datahub_ingest.py  test_enforcement.py  test_evaluation.py  test_events.py  test_impact.py  test_incident_state.py  test_investigator.py  test_mcp_client.py  test_metadata_writer.py  test_metrics.py  test_narration.py  test_pipeline_controller.py  test_policy_engine.py  test_policy_gate.py  test_profiles.py  test_reality_checker.py  test_recovery.py  test_redactor.py  test_replay_parity.py  (+6 more)
(+41 files in other folders)
